--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -21,7 +21,7 @@ h1 {
   text-align: center;
 }
 
-#quiz-info h1 {
+#quiz-info h1, #enter-score h2 {
   font-size: 45px;
   margin-top: 5%;
 }
@@ -41,6 +41,8 @@ h1 {
     margin-top: 5%;
 }
 
-#quiz-container p {
+#quiz-container p, #enter-score {
     padding-left: 35%;
 }
+
+
